data/derived/comb/progs/unify/prog4252.ml.out
Characters 29-39:
  let fixpoint (f,b) = wwhile (h  g (f) b
                               ^^^^^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
